# Anonymization-Service

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: mvp-challenges.md  pii-detector-playbook.md
examples/: README.md  challenge_backlog.json  request.json
src/makeaivisible_anonymizer/: README.md  __init__.py  detectors.py  limits.py  main.py  models.py  redaction.py
tests/: test_api.py  test_redaction.py
